# OperatingSystem

./: CMakeLists.txt  DesktopUI.cpp  DesktopUI.hh  Include.hh  README.md  UI.cpp  boot.asm  codingRule.md  define.hh  fs.c  globalVariable.hh  idt.asm  idt.c  index.html  kernel.c  linker.ld  main.c  main.cpp  memery.hpp  namespaces. hh  namespaces.hh  render.c  render.h  stage2.asm  string.c  string.h  test.bat  user.yml  wiki.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CMakeLists.txt  build.yml  c-cpp.yml  cmake-single-platform.yml
DLL/: README.md
DLL/desktopUI/wallPaper/: README.md
Wallpapers/: README.md
arch/x86/: ata.c  ata.h  idt.asm  idt.c  idt.h  io.h  keyboard.c  keyboard.h
curl/: multi.h  stdcheaders.h  system.h  websockets.h
fs/: fat32.c  fat32.h  fs.c  fs.h
headers/: Include.hh
kernel/: kernel.c  linker.ld
languages/: languagesMain.cpp
lib/: print.c  print.h
nlohmann/: README.md
proto_pb2/: CMakeLists.txt
render/: font.h  render.c  render.h
